# Notion

./: Cargo.toml
src/: main.rs
src/commands/: configure.rs
